Full-page background images, title page

--- a/demo-uulm.html
+++ b/demo-uulm.html
@@ -37,8 +37,11 @@
 
 				<section>
           <div class="title">
-            <h1>Reveal.js</h1>
-            <h3>HTML Presentations Made Easy</h3>
+            <img class="header" src="title.jpg" />
+            <div class="belowheader">
+              <h1>Reveal.js</h1>
+              <h3>HTML Presentations Made Easy</h3>
+            </div>
           </div>
 				</section>
 
@@ -57,6 +60,17 @@
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 					</aside>
+				</section>
+
+				<section>
+          <div class="fill">
+            <h2>Wow! Images!</h2>
+            <img src="wow.jpg" />
+            <p>
+              Awesome, page-filling backgrounds...
+              <img width="280" height="326" class="float-right" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
+            </p>
+          </div>
 				</section>
 
 				<!-- Example of nested vertical slides -->
